u - 添加tt工单信息统计的功能
